[tool.poetry]
name = "NONVME_brain_games"
version = "0.2.0"
description = ""
authors = ["NONVME <efimmm.ev@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
